--- a/examples/index.html
+++ b/examples/index.html
@@ -10,7 +10,7 @@
         <script type="importmap">
             {
                 "imports": {
-                    "@aws-sdk/{repoName}": "https://cdn.jsdelivr.net/gh/aws-sdk/{repoName}@{repoVersion}/index.min.mjs"
+                    "@aws-sdk/client-direct-connect": "https://cdn.jsdelivr.net/gh/aws-sdk/client-direct-connect@3.844.0/index.min.mjs"
                 }
             }
         </script>
